# injectPy

./: LICENSE  README.md  pyproject.toml
src/injectpy/: __init__.py  _container.py  _errors.py  decorator.py
