[project]
name = "injectpy"
version = "0.1.0"
description = "Minimal python dependency inject library"
readme = "README.md"
authors = [
    { name = "Pial-Al-Mamun", email = "pialalmamun99@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
